client/src/App.css
/* ... */
* {
  box-sizing: border-box;
  text-decoration: none;
  list-style-type: none;
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-size: 100%;
  vertical-align: baseline;
}

html,
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  font-size: var(--font-size-xs);
}

body h1:first-child {
  margin-top: 0;
}

h1,
h2,
p,
… {
  margin-top: 0;
}

body {
  font-family: var(--font-body), serif;
  /* Font is next big thing */
  font-size: var(--font-size-md);
  font-optical-sizing: auto;
  font-weight: 300;
  color: #000000;
  background-color: #e9ddd1;
  /* dfd3c9 */
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  line-height: var(--spacing-xl);
}

a {
  color: inherit; /* blue colors for links too */
  text-decoration: inherit; /* no underline */
}

a:hover {
  color: inherit;
}

h1 {
  font-size: var(--font-size-7xl);
  font-family: var(--font-header);
  font-weight: 900;
  color: #ffffff5d;
}

h2 {
  font-size: var(--font-size-lg);
  font-family: var(--font-subheading);
  letter-spacing: 2px;
}

p {
  font-family: var(--font-body);
  font-size: var(--font-size-xs);
}

li {
  font-family: var(--font-navbar);
  font-size: 1.5rem;
  font-size: var(--font-size-md);
  color: var(--nav-colour-1);
}

li img {
  width: 100%;
}

img {
  width: 100%;
}

button {
  -webkit-appearance: none;
  border-radius: 0;
  text-align: inherit;
  background: none;
  box-shadow: none;
  padding: 0;
  cursor: pointer;
  border: none;
  color: inherit;
  font: inherit;
}

button:hover {
  border-color: transparent;
}
/* Utilities */
.float {
  display: flow-root;
}

.float-right {
  float: right;
  shape-margin: 1.5rem;
  shape-outside: ellipse(
    33.33% 46.04% at 213px 134px
  ); /* shape-outside: url(assets/Images/CD.png); */
  width: 40%;
  margin-left: 10rem;
}

.flex {
  display: flex;
}

.flexAround {
  justify-content: space-around;
  align-items: center;
}

.flexSpread {
  justify-content: center;
  align-items: center;
}

.flexdown {
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.grid {
  display: grid;
}

.grid-3 {
  grid-template-columns: repeat(3, 1fr); /* 3 equal columns */
}

.span-1 {
  grid-column: span 1;
}

.span-2 {
  grid-column: span 2;
}

.right-position {
  position: absolute;
  right: 0;
  top: 6px;
}

.Screen-sizing {
  max-width: calc(60vw);
}

.Screen-sizing-2 {
  max-width: calc(100% - 4rem);
}

.Screen-sizing-3 {
  max-width: calc(100% - 15rem);
}

.hoverExpand {
  transition: transform 0.5s;
  transform: scale(1);
}

.hoverExpand:hover {
  overflow-y: visible;
  transform: scale(1.1);
}

.flow-1 > * + * {
  margin-top: 1rem;
}

.flow-2 > * + * {
  margin-top: 4rem;
}

.flow-3 > * + * {
  margin-top: 6rem;
}

.flow-4 > * + * {
  margin-top: 8rem;
}

.beige-bg {
  background: var(--main-bg-colour);
}

.blue-bg-gradient {
  background: var(--banner-bg);
  background: var(--banner-bg-gradient);
}

.yellow-bg {
  background: var(--banner-bg-colour-2);
}

nav {
  position: relative;
  width: 100%;
  height: 100%;
}

.noise {
  opacity: 1;
  background-image: url(assets/Images/Noise.png);
}

.marginLeft {
  margin-left: auto;
}

.marginEven {
  margin: 0 auto;
}

.marginEvenChildren > * {
  margin: auto;
}

.textAlign {
  text-align: center;
}

.gap-10 {
  gap: 0.5rem;
}

.gap-20 {
  gap: 2rem;
}

.gap-50 {
  gap: 5rem;
}

.gap-100 {
  gap: 10rem;
}
/* Transistion onto page onclick */
.pageTransistion > * {
  /* transition:; */
}

.text-clr-white {
  color: #ffffffcf;
}

.font-Stretch {
  transform: scaleY(1.15);
}

.border-radius-10 {
  border-radius: 10px;
}
/* block */

.ContactForm {
  background-color: white;
  color: black;
  border-radius: 10px;
}

.ContactForm h2 {
  font-family: sans-serif;
  font-weight: 300;
}

.ContactForm h3 {
  font-family: sans-serif;
  font-weight: 300;
  font-size: var(--font-size-xs);
}

.ContactForm form {
  margin: 40px 50px;
}

.ContactForm img {
  object-fit: cover;
  width: 100%;
  height: 100%;
  border-radius: 10px 0 0 10px;
}

input,
textarea {
  color: black;
  width: 100%;
  border: none;
  border-bottom: 2px solid #ccc;
  padding: 8px;
  font-size: 16px;
  background: transparent;
  outline: none;
  margin-bottom: 20px;
  transition: border-color 0.3s;
}

input:focus,
textarea:focus {
  border-bottom-color: #007bff;
}

/* From Uiverse.io by Creatlydev */
.button {
  line-height: 1;
  text-decoration: none;
  display: inline-flex;
  border: none;
  cursor: pointer;
  align-items: center;
  gap: 0.75rem;
  background-color: rgba(0, 0, 0, 0.897);

  color: #fff;
  border-radius: 10rem;
  font-weight: 600;
  padding: 0.75rem 1.5rem;
  padding-left: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  transition: background-color 0.3s;
}

.button__icon-wrapper {
  flex-shrink: 0;
  width: 25px;
  height: 25px;
  position: relative;
  color: rgb(0, 0, 0);
  background-color: #ffffffe0;
  border-radius: 50%;
  display: grid;
  place-items: center;
  overflow: hidden;
}

.navbtn:hover,
.navbtn:active {
  background-color: var(--nav-colour-1);
  background-size: 300% 100%;
  transition: 300ms ease-in-out;
  color: var(--nav-colour-2);
}

.button:hover {
  background-color: #000;
}

.button:hover .button__icon-wrapper {
  color: #000;
}

.button__icon-svg--copy {
  position: absolute;
  transform: translate(-150%, 150%);
}

.button:hover .button__icon-svg:first-child {
  transition: transform 0.3s ease-in-out;
  transform: translate(150%, -150%);
}

.button:hover .button__icon-svg--copy {
  transition: transform 0.3s ease-in-out 0.1s;
  transform: translate(0);
}

/* From Uiverse.io by adamgiebl */
/* From Uiverse.io by Creatlydev */

.padding-10 {
  padding: 10px 20px;
}

.padding-30 {
  padding: 30px;
}

.padding-80 {
  padding: 80px;
}

.white-txt {
  color: white;
}

.lightgrey-txt {
  color: #5a5a5a;
}
/* ... */

